# Multibody-Dynamics-Solver

./: .clang-format  .flake8  .gitignore  ANIMATION_FEATURES.md  CMakeLists.txt  LICENSE  Makefile  Plot.m  README.md  TESTING_AND_LINTING.md  build_python.sh  format.sh  lint.sh  main.cpp  pendulum.cpp  pendulum.hpp  pyproject.toml  pytest.ini  requirements.txt  test.py
include/: Body.hpp  Dynamics_System.hpp  Joint.hpp  Math.hpp  Visualization.hpp
include/linalg/: ArmadilloBackend.hpp  LinearAlgebra.hpp
legacy_tests/: test_pyside6_gui.py  test_python_bindings.py
matlab/: Input.m  Plot.m  importfile.m
python_bindings/: bindings.cpp
python_gui/: simple_gui.py
src/: ._Dynamics_System.cpp  ._main.cpp  Body.cpp  Dynamics_System.cpp  Joint.cpp  Math.cpp  Visualization.cpp  main.cpp
src/linalg/: ArmadilloBackend.cpp  LinearAlgebra.cpp
tests/: README.md  __init__.py  conftest.py  test_gui.py  test_multibody_solver.py  utils.py
tests/test_linalg/: test_linear_algebra.hpp  test_matrix_operations.cpp  test_vector_operations.cpp
